--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
     <header>
         <img src="images/logo2A updated.png" style="width: 80px;height: 70px;"/>
         <a href="#" class="logo" style="padding-right: 500px;">TechWorld</a>
-        <!-- <p>Decoding Challenges, Building Solutions</p> -->
-        <div class="bx bx-menu" id="menu-icon"></div>
+         <div class="menu-toggle" id="menu-icon">&#9776;</div>
 
         <ul class="navbar">
             <li><a href="#home">Home</a></li>
@@ -287,5 +286,19 @@
     <script src="https://unpkg.com/scrollreveal"></script>
     <!-- Link To JavaScript -->
     <script src="script.js"></script>
+     <script>
+   let menuIcon = document.querySelector('.menu-toggle'); // Update the selector to use the class
+let navbarIcon = document.querySelector('.navbar');
+
+menuIcon.onclick = () => {
+    navbarIcon.classList.toggle('active');
+}
+
+window.onscroll = () => {
+    navbarIcon.classList.remove('active');
+}
+
+
+</script>
 </body>
 </html>
