--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             <h2>Connect now</h2>
             <h4>Reach out today, and let's embark on a journey that transforms aspirations into achievements.</h4>
         </div>
-        <button onclick="showform()" class="btn">Connect Us</button>
+<!--         <button onclick="showform()" class="btn">Connect Us</button> -->
     </section>
 
     <!-- Connect Form -->
@@ -246,11 +246,14 @@
     <section class="contact" id="contact1">
         <div class="contact-box">
             <h3>TechWorld</h3>
-            <span>Connect With Us</span>
+<!--             <span>Connect With Us</span>
             <div class="social">
                 <a href="#"><i class='bx bxl-facebook' ></i></a>
                 <a href="#"><i class='bx bxl-whatsapp' ></i></a>
                 <a href="#"><i class='bx bxl-instagram' ></i></a>
+            </div> -->
+            <div>
+                <img src="images/logo2A updated.png" style="width: 80px;height: 70px;"/>
             </div>
         </div>
         <div class="contact-box">
