--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
             
             <!-- <a href="#text_to_show_hide" class="btn">Learn More</a> -->
-            <button class="btn" onclick="showtext()" id="showtextbtn">Learn More</button>
+            <button class="btn" onclick="showtext()" id="showtextbtn">More</button>
         </div>
     </section>
 
@@ -254,6 +254,7 @@
             </div> -->
             <div>
                 <img src="images/logo2A updated.png" style="width: 80px;height: 70px;"/>
+                <h5>Decoding Challenges,<br> Building Solutions</h5>
             </div>
         </div>
         <div class="contact-box">
