--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
     <section class="contact" id="contact1">
         <div class="contact-box">
             <h3>TechWorld</h3>
-<!--             <span>Connect With Us</span>
+      <span>Connect With Us</span>
             <div class="social">
                 <a href="#"><i class='bx bxl-facebook' ></i></a>
                 <a href="#"><i class='bx bxl-whatsapp' ></i></a>
