--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                 <a href="#"><i class='bx bxl-facebook' ></i></a>
                 <a href="#"><i class='bx bxl-whatsapp' ></i></a>
                 <a href="#"><i class='bx bxl-instagram' ></i></a>
-            </div> -->
+            </div> 
             <div>
                 <img src="images/logo2A updated.png" style="width: 80px;height: 70px;"/>
                 <h5>Decoding Challenges,<br> Building Solutions</h5>
