--- a/index.html
+++ b/index.html
@@ -248,7 +248,8 @@
             <h3>TechWorld</h3>
       <span>Connect With Us</span>
             <div class="social">
-                <a href="#"><i class='bx bxl-facebook' ></i></a>
+<!--                 <a href="#"><i class='bx bxl-facebook' ></i></a> -->
+                <a href="#"><i class='bx bxl-linkedin' ></i></a>
                 <a href="#"><i class='bx bxl-whatsapp' ></i></a>
                 <a href="#"><i class='bx bxl-instagram' ></i></a>
             </div> 
@@ -282,7 +283,7 @@
 
     <!-- Copyright -->
     <div class="copyright">
-        <p>©<b>TechWorld</b> All Right Reserved from 2023.</p>
+        <p>©<b>TechWorld</b> All Right Reserved from 2019.</p>
     </div>
 
 
