--- a/index.html
+++ b/index.html
@@ -249,8 +249,8 @@
       <span>Connect With Us</span>
             <div class="social">
 <!--                 <a href="#"><i class='bx bxl-facebook' ></i></a> -->
-                <a href="#"><i class='bx bxl-linkedin' ></i></a>
-                <a href="#"><i class='bx bxl-whatsapp' ></i></a>
+                <a href="https://www.linkedin.com/in/shruti-jain-2941091a0/"><i class='bx bxl-linkedin' ></i></a>
+                <a href="https://wa.me/9399711857"><i class='bx bxl-whatsapp' ></i></a>
                 <a href="#"><i class='bx bxl-instagram' ></i></a>
             </div> 
             <div>
