--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <img src="images/htmlcss_image.png" alt="">
                 </div>
                 <h2>HTML/CSS</h2>
-                <h3>Duration: 1Month</h3>
+<!--                 <h3>Duration: 1Month</h3> -->
                 <!-- <span>&#8377; 2500/-</span> -->
                 <!-- <i class='bx bx-cart-alt'></i> -->
             </div>
@@ -84,7 +84,7 @@
                     <img src="images/htmlcssjs_image.png" alt="">
                 </div>
                 <h2>Web Designing</h2>
-                <h3>Duration: 2Months </h3>
+<!--                 <h3>Duration: 2Months </h3> -->
                 <!-- <span>&#8377; 4000/-</span> -->
                 <!-- <i class='bx bx-cart-alt'></i> -->
             </div>
@@ -94,7 +94,7 @@
                     <img src="images/js1_image.png" alt="">
                 </div>
                 <h2>JavaScript</h2>
-                <h3>Duration: 1Month</h3>
+<!--                 <h3>Duration: 1Month</h3> -->
                 <!-- <span>&#8377; 2500/-</span> -->
                 <!-- <i class='bx bx-cart-alt'></i> -->
             </div>
@@ -104,7 +104,7 @@
                     <img src="images/c_image.png" alt="">
                 </div>
                 <h2>Programming in C</h2>
-                <h3>Duration: 1Month</h3>
+<!--                 <h3>Duration: 1Month</h3> -->
                 <!-- <span>&#8377; 2000/-</span> -->
                 <!-- <i class='bx bx-cart-alt'></i> -->
             </div>
@@ -114,7 +114,7 @@
                     <img src="images/c++_image.png" alt="">
                 </div>
                 <h2>Programming in C++</h2>
-                <h3>Duration: 1Month</h3>
+<!--                 <h3>Duration: 1Month</h3> -->
                 <!-- <span>&#8377; 2000/-</span> -->
                 <!-- <i class='bx bx-cart-alt'></i> -->
             </div>
@@ -124,7 +124,7 @@
                     <img src="images/corejava_image.png" alt="">
                 </div>
                 <h2>Core Java</h2>
-                <h3>Duration: 2.5Months</h3>
+<!--                 <h3>Duration: 2.5Months</h3> -->
                 <!-- <span>&#8377; 8000/-</span> -->
                 <!-- <i class='bx bx-cart-alt'></i> -->
             </div>
@@ -134,7 +134,7 @@
                     <img src="images/advancejava_image.png" alt="">
                 </div>
                 <h2>Advance Java</h2>
-                <h3>Duration: 1Month</h3>
+<!--                 <h3>Duration: 1Month</h3> -->
                 <!-- <span>&#8377; 2000/-</span> -->
                 <!-- <i class='bx bx-cart-alt'></i> -->
             </div>
@@ -144,7 +144,7 @@
                     <img src="images/python_image.png" alt="">
                 </div>
                 <h2>Core Python </h2>
-                <h3>Duration: 2.5Months</h3>
+<!--                 <h3>Duration: 2.5Months</h3> -->
                 <!-- <span>&#8377; 7000/-</span> -->
                 <!-- <i class='bx bx-cart-alt'></i> -->
             </div>
@@ -154,7 +154,7 @@
                     <img src="https://nyesteventuretech.com/images/django-development.png" alt="">
                 </div>
                 <h2>Python DJango</h2>
-                <h3>Duration: 1Month</h3>
+<!--                 <h3>Duration: 1Month</h3> -->
                 <!-- <span>&#8377; 2000/-</span> -->
                 <!-- <i class='bx bx-cart-alt'></i> -->
             </div>
@@ -164,7 +164,7 @@
                     <img src="https://www.freepnglogos.com/uploads/logo-mysql-png/logo-mysql-mysql-logo-png-transparent-svg-vector-bie-supply-2.png" alt="">
                 </div>
                 <h2>MySQL</h2>
-                <h3>Duration: 1Month</h3>
+<!--                 <h3>Duration: 1Month</h3> -->
                 <!-- <span>&#8377; 2000/-</span> -->
                 <!-- <i class='bx bx-cart-alt'></i> -->
             </div>
@@ -175,7 +175,7 @@
                     <img src="images/dsa_image.png" alt="">
                 </div>
                 <h2>Data Structure and Algorithms</h2>
-                <h3>Duration: 2Months</h3>
+<!--                 <h3>Duration: 2Months</h3> -->
                 <!-- <span>&#8377; 5000/-</span> -->
                 <!-- <i class='bx bx-cart-alt'></i> -->
             </div>
