--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 <div class="box-img">
                     <img src="images/python_image.png" alt="">
                 </div>
-                <h2>Core Python </h2>
+                <h2>Python </h2>
 <!--                 <h3>Duration: 2.5Months</h3> -->
                 <!-- <span>&#8377; 7000/-</span> -->
                 <!-- <i class='bx bx-cart-alt'></i> -->
@@ -249,9 +249,9 @@
       <span>Connect With Us</span>
             <div class="social">
 <!--                 <a href="#"><i class='bx bxl-facebook' ></i></a> -->
-                <a href="https://www.linkedin.com/in/shruti-jain-2941091a0/"><i class='bx bxl-linkedin' ></i></a>
+                <a href="https://www.linkedin.com/in/tech-world-a526802b6/"><i class='bx bxl-linkedin' ></i></a>
                 <a href="https://wa.me/9399711857"><i class='bx bxl-whatsapp' ></i></a>
-                <a href="#"><i class='bx bxl-instagram' ></i></a>
+                <a href="https://www.instagram.com/tech_world.___/"><i class='bx bxl-instagram' ></i></a>
             </div> 
             <div>
                 <img src="images/logo2A updated.png" style="width: 80px;height: 70px;"/>
