--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
     <!-- Connect -->
     <section class="connect">
         <div class="connect-text">
-            <span>Let's Talk</span>
+            <span style="align-items: center">Let's Talk</span>
             <h2>Connect now</h2>
             <h4>Reach out today, and let's embark on a journey that transforms aspirations into achievements.</h4>
         </div>
