--- a/index.html
+++ b/index.html
@@ -217,8 +217,10 @@
     <!-- Connect -->
     <section class="connect">
         <div class="connect-text">
+            <div class="heading">
             <span>Let's Talk</span>
             <h2>Connect now</h2>
+            </div>
             <h4>Reach out today, and let's embark on a journey that transforms aspirations into achievements.</h4>
         </div>
 <!--         <button onclick="showform()" class="btn">Connect Us</button> -->
