--- a/index.html
+++ b/index.html
@@ -294,16 +294,43 @@
     <!-- Link To JavaScript -->
     <script src="script.js"></script>
      <script>
-   let menuIcon = document.querySelector('.menu-toggle'); // Update the selector to use the class
-let navbarIcon = document.querySelector('.navbar');
+//    let menuIcon = document.querySelector('.menu-toggle'); // Update the selector to use the class
+// let navbarIcon = document.querySelector('.navbar');
+
+// menuIcon.onclick = () => {
+//     navbarIcon.classList.toggle('active');
+// }
+
+// window.onscroll = () => {
+//     navbarIcon.classList.remove('active');
+// }
+
+         // Update menu toggle functionality
+let menuIcon = document.querySelector('.menu-toggle');
+let navbar = document.querySelector('.navbar');
 
 menuIcon.onclick = () => {
-    navbarIcon.classList.toggle('active');
+    navbar.classList.toggle('active');
 }
 
-window.onscroll = () => {
-    navbarIcon.classList.remove('active');
-}
+// Close navbar when a link is clicked on mobile devices
+document.querySelectorAll('.navbar a').forEach(item => {
+  item.addEventListener('click', () => {
+    navbar.classList.remove('active');
+  });
+});
+
+// Smooth scrolling behavior
+document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+    anchor.addEventListener('click', function (e) {
+        e.preventDefault();
+
+        document.querySelector(this.getAttribute('href')).scrollIntoView({
+            behavior: 'smooth'
+        });
+    });
+});
+
          
 
 
